--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇫🇷 法国-885.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-2.52MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-311.9KB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 78234ff5-7ddb-3b20-b797-d430b0d4a7b9, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-429.5KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-246.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-312.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇳 中国-492.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇦 加拿大-848.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-320.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-546.3KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-875.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-394.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-492.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-875.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
