--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-716.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.33MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-312.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-546.3KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: a6a6d724-c1ad-4c18-aa07-b784b34491a9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-848.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 23.224.31.44, port: 443, type: vmess, uuid: 2278efe4-ad0c-47ce-9480-068608368d76, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 23.224.31.44}}
-  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 23.225.33.43, port: 443, type: vmess, uuid: aaea45eb-7b4b-44d4-9080-56470ddfc58a, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 23.225.33.43}}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 23.224.31.213, port: 443, type: vmess, uuid: d0e22005-b9fe-4bbc-81a3-27c52d4927a4, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 23.224.31.213}}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: v19.emovpn.xyz, port: 1271, type: vmess, uuid: c8f0221c-d1da-4d61-aa0f-7b9889856e33, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v19.emovpn.xyz}}
   - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: inap008.xmrth-node.xyz, port: 12265, type: vmess, uuid: 53ad95b1-8693-34e3-98d7-2010ad24aaf9, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: inap008.xmrth-node.xyz}}
+  - {name: 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-971.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-716.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-546.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-848.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
