--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-971.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-847.9KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.02MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: 23.225.33.43, port: 443, type: vmess, uuid: aaea45eb-7b4b-44d4-9080-56470ddfc58a, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 23.225.33.43}}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.97MB/s(Youtube:不良林), server: 23.225.41.66, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 23.225.41.66}}
+  - {name: 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇫🇷 法国-598.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-3.38MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.55MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-971.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-847.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-920.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
       - 🇫🇷 法国-598.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
